[gd_scene load_steps=23 format=3 uid="uid://bdedrxocj46sr"]

[ext_resource type="Script" path="res://Scripts/Objects/Characters/PlayerCharacter.gd" id="1_c8c0q"]
[ext_resource type="PackedScene" uid="uid://m84defn1thau" path="res://Objects/Characters/Godzilla.tscn" id="1_swkt0"]
[ext_resource type="PackedScene" uid="uid://camascwoory5h" path="res://Objects/HealthComponent.tscn" id="3_bws3y"]
[ext_resource type="PackedScene" uid="uid://bffduqvb2xwju" path="res://Objects/StateMachine.tscn" id="3_eux1x"]
[ext_resource type="Script" path="res://Scripts/Objects/Characters/Walk.gd" id="3_r4s32"]
[ext_resource type="PackedScene" uid="uid://bdrpwa8gyr6lc" path="res://Objects/PowerComponent.tscn" id="4_434eu"]
[ext_resource type="Script" path="res://Scripts/Objects/Fly.gd" id="4_amfr8"]
[ext_resource type="Script" path="res://Scripts/Objects/Characters/LevelIntro.gd" id="4_n3l83"]
[ext_resource type="PackedScene" uid="uid://bi7wq6b7la5ki" path="res://Objects/AttackComponent.tscn" id="5_cce5b"]
[ext_resource type="Script" path="res://Scripts/Objects/Characters/Attack.gd" id="5_gtijs"]
[ext_resource type="Script" path="res://Scripts/Objects/Characters/Hurt.gd" id="5_t6xgh"]
[ext_resource type="Script" path="res://Scripts/Objects/Characters/Dead.gd" id="6_b6u5i"]
[ext_resource type="AudioStream" uid="uid://deo2ts4xdwwce" path="res://Audio/SFX/CharPunch.wav" id="11_npbvd"]
[ext_resource type="AudioStream" uid="uid://bnpu85disxvis" path="res://Audio/SFX/GodzillaHeatBeam.wav" id="11_y38wb"]
[ext_resource type="AudioStream" uid="uid://dcy2jbwfd2no" path="res://Audio/SFX/CharHurt.wav" id="12_re2uk"]
[ext_resource type="AudioStream" uid="uid://clfqyu3fby0tv" path="res://Audio/SFX/LevelUp.wav" id="13_l1dc3"]
[ext_resource type="AudioStream" uid="uid://c4ljcr4s0y8uy" path="res://Audio/SFX/HedorahPunch.wav" id="14_5ch08"]
[ext_resource type="AudioStream" uid="uid://d3ld8q0jgdrnq" path="res://Audio/SFX/Hedorah_Morph.wav" id="15_5oc3b"]
[ext_resource type="AudioStream" uid="uid://bgh7sdqgg4m17" path="res://Audio/SFX/Hedorah_Morph_Out.wav" id="16_fbqkg"]
[ext_resource type="AudioStream" uid="uid://dt4r581d6diwt" path="res://Audio/SFX/Hedorah_Sludge_Hit.wav" id="17_qgei5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yw7jv"]
size = Vector2(20, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ge4p2"]
size = Vector2(36, 6)

[node name="PlayerCharacter" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_c8c0q")

[node name="Skin" parent="." instance=ExtResource("1_swkt0")]

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_yw7jv")

[node name="MothraFloorChecking" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MothraFloorChecking"]
position = Vector2(-4, 12)
shape = SubResource("RectangleShape2D_ge4p2")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_eux1x")]
initial_state = NodePath("LevelIntro")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("3_r4s32")

[node name="Fly" type="Node" parent="StateMachine"]
script = ExtResource("4_amfr8")

[node name="LevelIntro" type="Node" parent="StateMachine"]
script = ExtResource("4_n3l83")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("5_t6xgh")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("6_b6u5i")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("5_gtijs")

[node name="SFX" type="Node" parent="."]

[node name="Step" type="AudioStreamPlayer" parent="SFX"]
bus = &"SFX"

[node name="Roar" type="AudioStreamPlayer" parent="SFX"]
bus = &"SFX"

[node name="Punch" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_npbvd")
bus = &"SFX"

[node name="Hurt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_re2uk")
bus = &"SFX"

[node name="HeatBeam" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_y38wb")
bus = &"SFX"

[node name="LevelUp" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_l1dc3")
volume_db = 8.0
bus = &"SFX"

[node name="HedorahPunch" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_5ch08")

[node name="HedorahMorph" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_5oc3b")

[node name="HedorahMorphOut" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_fbqkg")

[node name="HedorahSludgeHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_qgei5")

[node name="HealthComponent" parent="." instance=ExtResource("3_bws3y")]
invincibility_time_seconds = 0.5

[node name="PowerComponent" parent="." instance=ExtResource("4_434eu")]

[node name="AttackComponent" parent="." instance=ExtResource("5_cce5b")]
should_attack = false

[connection signal="damaged" from="HealthComponent" to="." method="_on_health_damaged"]
[connection signal="dead" from="HealthComponent" to="." method="_on_health_dead"]
[connection signal="attacked" from="AttackComponent" to="." method="_on_attack_component_attacked"]
